--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -17,18 +17,51 @@ body {
 }
 
 header {
-  height: 65px;
+  height: 80px;
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
-  position :fixed;
+  background-color: rgba(255, 254, 254, 0.7);
+  position: fixed;
   top: 0;
   z-index: 10;
 }
 
-main{
-  width: 100%;
-  max-width: 1100px;
-  margin: auto;
+.header-left {
+  float: left;
+}
+
+.header-left img {
+  width: 250px;
+  margin-top: 5px;
+}
+
+.header-right {
+  float: right;
+  color: white;
+}
+
+.header-right li {
+  float: left;
+  list-style: none;
+  padding: 15px 25px;
+  margin-left: 25px;
+  background-color: rgb(33, 96, 221);
+  border-radius: 25px;
+}
+
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background: url(assets/image/top-wrapper.jpg);
+  background-size: cover;
+  color: white;
+  text-align: center;
+}
+
+.middle-wrapper {
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: left;
 }
 
 form {
@@ -68,8 +101,28 @@ textarea {
   height: 5em;
 }
 
-
 footer {
   padding-top: 30px;
   padding-bottom: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
+}
+
+::-webkit-scrollbar {
+  width: 1em;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgb(122, 153, 217)),
+    color-stop(0.72, rgb(73, 125, 189)),
+    color-stop(0.86, rgb(28, 58, 148))
+  );
 }
